--- a/data/10k_text_extraction.ipynb
+++ b/data/10k_text_extraction.ipynb
@@ -61,7 +61,7 @@
       "cell_type": "code",
       "source": [
         "# Set the environment variable\n",
-        "os.environ[\"HUGGING_FACE_TOKEN\"] = \"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\""
+        "os.environ[\"HUGGING_FACE_TOKEN\"] = \"YOUR_TOKEN\""
       ],
       "metadata": {
         "id": "WE_eqAp2Xi0F"
@@ -401,7 +401,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNf7EQS6WaXwnXDlpf6Gtb4",
+      "authorship_tag": "ABX9TyPSd0b0L2s3GHSL+0ZMxZpx",
       "include_colab_link": true
     },
     "kernelspec": {
