--- a/data/10k_text_extraction.ipynb
+++ b/data/10k_text_extraction.ipynb
@@ -13,7 +13,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Text extraction from the 10K filings\n",
+        "#Text extraction from the 10K filings\n",
         "\n"
       ],
       "metadata": {
@@ -58,7 +58,7 @@
       "cell_type": "code",
       "source": [
         "# Set the environment variable\n",
-        "os.environ[\"HUGGING_FACE_TOKEN\"] = \"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\""
+        "os.environ[\"HUGGING_FACE_TOKEN\"] = \"YOUR TOKEN\""
       ],
       "metadata": {
         "id": "WE_eqAp2Xi0F"
@@ -97,6 +97,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "##Read the csv file with previously downloaded nfo about companies, filings and urls"
+      ],
+      "metadata": {
+        "id": "rS1rgI-0GMQz"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 5,
       "metadata": {
@@ -128,15 +137,6 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "The url link for the .txt filing:"
-      ],
-      "metadata": {
-        "id": "X3kmVTih_SJg"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "headers = {'User-Agent': 'Fachhochschule Kiel aleksei.trikoz@student.fh-kiel.de'}"
@@ -150,12 +150,14 @@
     {
       "cell_type": "code",
       "source": [
+        "#Function for modifying url link\n",
         "def modify_url(original_url, filename):\n",
         "    modified_url = re.sub(r'-', '', original_url) # remove '-' signs in the specified section\n",
         "    modified_url = modified_url.replace('.txt', '') # remove '.txt' extension\n",
         "    modified_url = f\"{modified_url}/{filename}\" # add '/' sign and the filename at the end\n",
         "    return modified_url\n",
         "\n",
+        "#Function for modifying text from the filings\n",
         "def modify_text(text):\n",
         "    text = ''.join(replace_dict.get(c, c) for c in text)\n",
         "    start_index = -1\n",
@@ -170,17 +172,20 @@
         "      print('Starting phrase not found in the text')\n",
         "    return text\n",
         "\n",
+        "#Starting phrases\n",
         "search_phrases = [\"ANNUAL REPORT PURSUANT TO SECTION\", \"Annual report pursuant to section\",\n",
         "                  \"Annual Report Pursuant to Section\", \"Annual report pursuant to Section\",\n",
         "                  \"ANNUAL REPORT UNDER SECTION\", \"ANNUAL       REPORT PURSUANT TO SECTION\",\n",
         "                  \"ANNUAL   REPORT PURSUANT TO SECTION\", \"ANNUAL     REPORT UNDER SECTION\"]\n",
         "\n",
+        "#Dictionary with special characters\n",
         "replace_dict = {'\\n':' ', '\\t':' ', '\\xa0':' ', '\\x95':' ', '\\x94':' ', '\\x93':' ', '\\x97':' ', '\\x92':' ','\\x86':' ','\\x91':' '}\n",
         "\n",
+        "#Text extraction from the filings\n",
         "for index, row in tqdm(df_10.iterrows(), total=len(df_10), desc=\"Processing rows\"):\n",
         "  url = row['file_url']\n",
         "  response = requests.get(url, headers=headers)\n",
-        "  soup = BeautifulSoup(response.content, 'lxml') #Unparsed links appeared when using 'html.parser'\n",
+        "  soup = BeautifulSoup(response.content, 'lxml') # unparsed links appeared when using 'html.parser'\n",
         "  filename = soup.find('SEC-DOCUMENT')\n",
         "  filename = soup.find('document')\n",
         "  filename = soup.find('filename')\n",
@@ -434,6 +439,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Uploading dataset to the Hugging Face:"
+      ],
+      "metadata": {
+        "id": "WeaNkdzaHNe4"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "dataset = Dataset.from_pandas(df_10)\n",
@@ -482,7 +496,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM56Znuw/9ABqhCLfxkksbA",
+      "authorship_tag": "ABX9TyNdetAK5TtwFWhPM/fZDgU4",
       "include_colab_link": true
     },
     "kernelspec": {
