--- a/notebooks/FinanceBench_chromaDB_deployment.ipynb
+++ b/notebooks/FinanceBench_chromaDB_deployment.ipynb
@@ -858,12 +858,67 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Cloning collections with different distance metrics"
+      ],
+      "metadata": {
+        "id": "5J_uu1Hxivaa"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "client = chromadb.PersistentClient('/content/drive/MyDrive/Thesis/chromadb')\n",
+        "collection = persistent_client.get_or_create_collection(\"Reports\")  # distance function L2 by default\n",
+        "\n",
+        "newCollection = client.get_or_create_collection(\"reports_cosine\", metadata={\"hnsw:space\": \"cosine\"})  # change the distance function to cosine\n",
+        "\n",
+        "existing_count = collection.count()\n",
+        "batch_size = 10\n",
+        "for i in range(0, existing_count, batch_size):\n",
+        "    batch = collection.get(include=[\"metadatas\", \"documents\", \"embeddings\"], limit=batch_size, offset=i)\n",
+        "    newCollection.add(ids=batch[\"ids\"], documents=batch[\"documents\"], metadatas=batch[\"metadatas\"],\n",
+        "               embeddings=batch[\"embeddings\"])\n",
+        "\n",
+        "print(newCollection.count()) #356275"
+      ],
+      "metadata": {
+        "id": "NrY5fq7oiuo2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "client = chromadb.PersistentClient('/content/drive/MyDrive/Thesis/chromadb')\n",
+        "collection = persistent_client.get_or_create_collection(\"Reports\")  # create a new collection with L2 (default)\n",
+        "\n",
+        "newCollection = client.get_or_create_collection(\"reports_ip\", metadata={\"hnsw:space\": \"ip\"})  # let's change the distance function to inner product\n",
+        "\n",
+        "existing_count = collection.count()\n",
+        "batch_size = 10\n",
+        "for i in range(0, existing_count, batch_size):\n",
+        "    batch = collection.get(include=[\"metadatas\", \"documents\", \"embeddings\"], limit=batch_size, offset=i)\n",
+        "    newCollection.add(ids=batch[\"ids\"], documents=batch[\"documents\"], metadatas=batch[\"metadatas\"],\n",
+        "               embeddings=batch[\"embeddings\"])\n",
+        "\n",
+        "print(newCollection.count()) #356275"
+      ],
+      "metadata": {
+        "id": "w7nqGibyiud8"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMelFjlNp7z82oDChCG4TSc",
+      "authorship_tag": "ABX9TyMJLQxjo0qKFX9VosZh8cSo",
       "include_colab_link": true
     },
     "kernelspec": {
