--- a/notebooks/rag_x_phi3_generalQA.ipynb
+++ b/notebooks/rag_x_phi3_generalQA.ipynb
@@ -557,11 +557,7 @@
     {
       "cell_type": "code",
       "source": [
-        "company_names = [#'coca cola', 'nike', '3M', 'amazon',\n",
-        "                 #'adobe',\n",
-        "                 #'amd',\n",
-        "                 #'bestbuy',\n",
-        "                 'jpmorgan', 'locheed martin', 'microsoft', 'paypal', 'verizon', 'walmart']"
+        "company_names = ['coca cola', 'nike', '3M', 'amazon', 'jpmorgan', 'locheed martin', 'microsoft', 'paypal', 'verizon', 'walmart']"
       ],
       "metadata": {
         "id": "7xZMFSSNRCjl"
