--- a/evaluation/argilla_notebook.ipynb
+++ b/evaluation/argilla_notebook.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNzjFDf5haRxU8UaTFehlLt",
+      "authorship_tag": "ABX9TyM9R93slN2aLBUJjyiRY2Me",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -202,6 +202,85 @@
           }
         },
         "bd8f98908bda49a79a2c20b9eba01456": {
+          "model_module": "@jupyter-widgets/base",
+          "model_name": "LayoutModel",
+          "model_module_version": "1.2.0",
+          "state": {
+            "_model_module": "@jupyter-widgets/base",
+            "_model_module_version": "1.2.0",
+            "_model_name": "LayoutModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/base",
+            "_view_module_version": "1.2.0",
+            "_view_name": "LayoutView",
+            "align_content": null,
+            "align_items": null,
+            "align_self": null,
+            "border": null,
+            "bottom": null,
+            "display": null,
+            "flex": null,
+            "flex_flow": null,
+            "grid_area": null,
+            "grid_auto_columns": null,
+            "grid_auto_flow": null,
+            "grid_auto_rows": null,
+            "grid_column": null,
+            "grid_gap": null,
+            "grid_row": null,
+            "grid_template_areas": null,
+            "grid_template_columns": null,
+            "grid_template_rows": null,
+            "height": null,
+            "justify_content": null,
+            "justify_items": null,
+            "left": null,
+            "margin": null,
+            "max_height": null,
+            "max_width": null,
+            "min_height": null,
+            "min_width": null,
+            "object_fit": null,
+            "object_position": null,
+            "order": null,
+            "overflow": null,
+            "overflow_x": null,
+            "overflow_y": null,
+            "padding": null,
+            "right": null,
+            "top": null,
+            "visibility": null,
+            "width": null
+          }
+        },
+        "428ae5f77847477eb3ff26ea9cc105c8": {
+          "model_module": "@jupyter-widgets/output",
+          "model_name": "OutputModel",
+          "model_module_version": "1.0.0",
+          "state": {
+            "_dom_classes": [],
+            "_model_module": "@jupyter-widgets/output",
+            "_model_module_version": "1.0.0",
+            "_model_name": "OutputModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/output",
+            "_view_module_version": "1.0.0",
+            "_view_name": "OutputView",
+            "layout": "IPY_MODEL_d3410b6bc0a64ef89cf2fff708912ada",
+            "msg_id": "",
+            "outputs": [
+              {
+                "output_type": "display_data",
+                "data": {
+                  "text/plain": "Pushing records to Argilla... \u001b[38;2;249;38;114m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[38;5;237m╺\u001b[0m\u001b[38;5;237m━━━━━\u001b[0m \u001b[35m 85%\u001b[0m \u001b[36m0:00:01\u001b[0m\n",
+                  "text/html": "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Pushing records to Argilla... <span style=\"color: #f92672; text-decoration-color: #f92672\">━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━</span><span style=\"color: #3a3a3a; text-decoration-color: #3a3a3a\">╺━━━━━</span> <span style=\"color: #800080; text-decoration-color: #800080\"> 85%</span> <span style=\"color: #008080; text-decoration-color: #008080\">0:00:01</span>\n</pre>\n"
+                },
+                "metadata": {}
+              }
+            ]
+          }
+        },
+        "d3410b6bc0a64ef89cf2fff708912ada": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -1271,6 +1350,279 @@
       ],
       "metadata": {
         "id": "owB_igofoalm"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Adding datasets NoRag FinBench150"
+      ],
+      "metadata": {
+        "id": "ZyZJJIGujF6r"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ds=pd.read_csv('https://raw.githubusercontent.com/winterForestStump/thesis/main/evaluation/phi-3_x_no_rag/csv/financebench_eval_no_rag.json.csv')\n",
+        "data_set = Dataset.from_pandas(ds)\n",
+        "data_set"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "j7xNMAjcjMDS",
+        "outputId": "1a2e4462-a6bf-4dc5-b3c0-6091084c664d"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Dataset({\n",
+              "    features: ['Unnamed: 0', 'question', 'response', 'correct_answer'],\n",
+              "    num_rows: 150\n",
+              "})"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "feedback_dataset = rg.FeedbackDataset(\n",
+        "    guidelines=\"Grade the retrieval and generation results of the RAG chain\",\n",
+        "    fields=[\n",
+        "        rg.TextField(name=\"query\", title=\"User's question (query)\"),\n",
+        "        rg.TextField(name=\"generated_response\", title=\"Generated LLM response (answer) to the question\"),\n",
+        "        rg.TextField(name=\"ground_truth\", title=\"Ground Truth (Correct Answer)\"),\n",
+        "    ],\n",
+        "    questions=[\n",
+        "        rg.LabelQuestion(\n",
+        "            name=\"correctness\",\n",
+        "            title=\"Does the generated answer match the ground truth answer?\",\n",
+        "            labels=[\"YES\", \"NO\", \"UNSURE\"],\n",
+        "            required=True,\n",
+        "            visible_labels=None\n",
+        "            ),\n",
+        "        rg.LabelQuestion(\n",
+        "            name=\"usefulness\",\n",
+        "            title=\"Is generated answer useful to resolve a question?\",\n",
+        "            labels=[\"YES\", \"NO\", \"UNSURE\"],\n",
+        "            required=True,\n",
+        "            visible_labels=None\n",
+        "            ),\n",
+        "    ]\n",
+        ")\n",
+        "feedback_dataset"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Jytkpq97jVLc",
+        "outputId": "49e34375-c7b7-46fa-e44e-8f21e7b65d67"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "FeedbackDataset(\n",
+              "   fields=[TextField(name='query', title=\"User's question (query)\", required=True, type='text', use_markdown=False), TextField(name='generated_response', title='Generated LLM response (answer) to the question', required=True, type='text', use_markdown=False), TextField(name='ground_truth', title='Ground Truth (Correct Answer)', required=True, type='text', use_markdown=False)]\n",
+              "   questions=[LabelQuestion(name='correctness', title='Does the generated answer match the ground truth answer?', description=None, required=True, type='label_selection', labels=['YES', 'NO', 'UNSURE'], visible_labels=None), LabelQuestion(name='usefulness', title='Is generated answer useful to resolve a question?', description=None, required=True, type='label_selection', labels=['YES', 'NO', 'UNSURE'], visible_labels=None)]\n",
+              "   guidelines=Grade the retrieval and generation results of the RAG chain)\n",
+              "   metadata_properties=[])\n",
+              "   vectors_settings=[])\n",
+              ")"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "records = []\n",
+        "for i, item in enumerate(data_set):\n",
+        "    records.append(\n",
+        "        rg.FeedbackRecord(\n",
+        "            fields={\n",
+        "                \"query\": item[\"question\"],\n",
+        "                \"generated_response\": item[\"response\"],\n",
+        "                \"ground_truth\": item[\"correct_answer\"],\n",
+        "            },\n",
+        "            external_id=f\"record-{i}\"\n",
+        "        )\n",
+        "    )\n",
+        "\n",
+        "feedback_dataset.add_records(records)"
+      ],
+      "metadata": {
+        "id": "cayuI1_wjpk4"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "remote_dataset = feedback_dataset.push_to_argilla(name=\"noRag-financebench150\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 272,
+          "referenced_widgets": [
+            "428ae5f77847477eb3ff26ea9cc105c8",
+            "d3410b6bc0a64ef89cf2fff708912ada"
+          ]
+        },
+        "id": "4vig0kVJjueX",
+        "outputId": "0af2b5f8-56e1-455b-c1da-2d7c337b27af"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "Output()"
+            ],
+            "application/vnd.jupyter.widget-view+json": {
+              "version_major": 2,
+              "version_minor": 0,
+              "model_id": "428ae5f77847477eb3ff26ea9cc105c8"
+            }
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [],
+            "text/html": [
+              "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"></pre>\n"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "\n"
+            ],
+            "text/html": [
+              "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">\n",
+              "</pre>\n"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "INFO:argilla.client.feedback.dataset.local.mixins:✓ Dataset succesfully pushed to Argilla\n",
+            "INFO:argilla.client.feedback.dataset.local.mixins:RemoteFeedbackDataset(\n",
+            "   id=4c74d7f6-2b4a-4303-86c9-e4bc1ef2f957\n",
+            "   name=noRag-financebench150\n",
+            "   workspace=Workspace(id=142a9c2d-f1dc-4704-8188-daf87f726164, name=admin, inserted_at=2024-07-03 09:01:38.246747, updated_at=2024-07-03 09:01:38.246747)\n",
+            "   url=https://winterforeststump-thesis.hf.space/dataset/4c74d7f6-2b4a-4303-86c9-e4bc1ef2f957/annotation-mode\n",
+            "   fields=[RemoteTextField(id=UUID('bba49e30-a1ab-4890-9031-5fd1059fe965'), client=None, name='query', title=\"User's question (query)\", required=True, type='text', use_markdown=False), RemoteTextField(id=UUID('f82090d3-01b4-488e-bdb5-4d218de310d1'), client=None, name='generated_response', title='Generated LLM response (answer) to the question', required=True, type='text', use_markdown=False), RemoteTextField(id=UUID('c65e7fdd-4b36-4972-b118-e1350936813d'), client=None, name='ground_truth', title='Ground Truth (Correct Answer)', required=True, type='text', use_markdown=False)]\n",
+            "   questions=[RemoteLabelQuestion(id=UUID('13cdb66c-d79a-4f50-87f5-1e10d3b2c425'), client=None, name='correctness', title='Does the generated answer match the ground truth answer?', description=None, required=True, type='label_selection', labels=['YES', 'NO', 'UNSURE'], visible_labels=None), RemoteLabelQuestion(id=UUID('d497c79a-639d-4f15-8ae6-48a487e74fd4'), client=None, name='usefulness', title='Is generated answer useful to resolve a question?', description=None, required=True, type='label_selection', labels=['YES', 'NO', 'UNSURE'], visible_labels=None)]\n",
+            "   guidelines=Grade the retrieval and generation results of the RAG chain\n",
+            "   metadata_properties=[]\n",
+            "   vectors_settings=[]\n",
+            ")\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Collect responses NO RAG Generaal QA"
+      ],
+      "metadata": {
+        "id": "zoCdd4LOkO76"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "feedback = rg.FeedbackDataset.from_argilla(\"noRag-financebench150\", workspace=\"admin\")"
+      ],
+      "metadata": {
+        "id": "_ezyMKPLkRuL"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list_values = []\n",
+        "for record_ix,record in enumerate(feedback):\n",
+        "  list_values.append({\"record\": str(record_ix+1),\n",
+        "                      \"id\": feedback.records[record_ix].id,\n",
+        "                      \"query\": feedback.records[record_ix].fields['query'],\n",
+        "                      \"generated_response\": feedback.records[record_ix].fields['generated_response'],\n",
+        "                      \"usefulness_value\": feedback.records[record_ix].responses[0].values[\"usefulness\"].value,\n",
+        "                      \"correctness_value\": feedback.records[record_ix].responses[0].values[\"correctness\"].value\n",
+        "                      })"
+      ],
+      "metadata": {
+        "id": "u9rKZZDOkWEk"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "len(list_values)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "v6lt5zL8k5iR",
+        "outputId": "9bdf6787-f2ce-4ad6-94b3-f8e72bbe3a43"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "150"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df = pd.DataFrame(list_values)\n",
+        "df.to_csv('eval_resuts_argilla_NoRagFinanceBench150.csv')"
+      ],
+      "metadata": {
+        "id": "uH1Gcv0Uk7wi"
       },
       "execution_count": 7,
       "outputs": []
