--- a/notebooks/experiment_llama2_chain_filter_flashrerank.ipynb
+++ b/notebooks/experiment_llama2_chain_filter_flashrerank.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "YxEkzrz5S14p",
         "colab": {
@@ -122,7 +122,7 @@
         },
         "outputId": "fbfbf974-ad5f-4cf4-c8a5-693e898f33f7"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -135,7 +135,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "F-9B6WiATPIM"
       },
@@ -183,7 +183,7 @@
       "metadata": {
         "id": "dd-mQiu5AGe_"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -192,12 +192,12 @@
         "id": "-x5D9D5Si-sX"
       },
       "source": [
-        "BGE models on the HuggingFace are the best open-source embedding models. BGE model is created by the Beijing Academy of Artificial Intelligence (BAAI). BAAI is a private non-profit organization engaged in AI research and development."
+        "BGE models on the HuggingFace are one of the best open-source embedding models. BGE model is created by the Beijing Academy of Artificial Intelligence (BAAI). BAAI is a private non-profit organization engaged in AI research and development."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "b7G9cdM8TPDA",
         "colab": {
@@ -509,18 +509,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "z1dWJ431a6-P"
-      },
-      "source": [
-        "File Directory\n",
-        "This covers how to load all documents in a directory.\n",
-        "\n",
-        "Under the hood, by default this uses the UnstructuredLoader."
-      ]
-    },
-    {
       "cell_type": "code",
       "source": [
         "# Define the metadata extraction function.\n",
@@ -541,7 +529,7 @@
       "metadata": {
         "id": "_UvCHoDyVnKZ"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -567,7 +555,7 @@
         },
         "outputId": "b88b6640-350d-4bd2-951e-32429695fff8"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -595,7 +583,7 @@
       "metadata": {
         "id": "yZdZxStg4fuM"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -611,7 +599,7 @@
         },
         "outputId": "2a5d8977-5f3f-4031-ef6f-eaa780e51397"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -638,18 +626,7 @@
         "\n",
         "You may want to have small documents, so that their embeddings can most accurately reflect their meaning. If too long, then the embeddings can lose meaning.\n",
         "You want to have long enough documents that the context of each chunk is retained.\n",
-        "The ParentDocumentRetriever strikes that balance by splitting and storing small chunks of data. During retrieval, it first fetches the small chunks but then looks up the parent ids for those chunks and returns those larger documents.\n",
-        "\n",
-        "Note that “parent document” refers to the document that a small chunk originated from. This can either be the whole raw document OR a larger chunk."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "V-01barub25p"
-      },
-      "source": [
-        "Sometimes, the full documents can be too big to want to retrieve them as is. In that case, what we really want to do is to first split the raw documents into larger chunks, and then split it into smaller chunks. We then index the smaller chunks, but on retrieval we retrieve the larger chunks (but still not the full documents)."
+        "The ParentDocumentRetriever strikes that balance by splitting and storing small chunks of data. During retrieval, it first fetches the small chunks but then looks up the parent ids for those chunks and returns those larger documents."
       ]
     },
     {
@@ -679,12 +656,12 @@
       "metadata": {
         "id": "RtmsEK3hD1d0"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": null,
       "metadata": {
         "id": "VV8VRD-kbd6S"
       },
@@ -709,6 +686,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Using a reranker to reduce the number of chunks from 6 to 2"
+      ],
+      "metadata": {
+        "id": "U-Tz4g3PN_GO"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "N_DOCS_RETURN = 2\n",
@@ -721,7 +707,7 @@
       "metadata": {
         "id": "hee-SeuTAMTA"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -745,7 +731,7 @@
         },
         "outputId": "89266d07-b36c-4c92-e8d1-dab469873235"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -771,7 +757,7 @@
         "id": "Tq23MKkYD22y",
         "outputId": "22f604b3-bb7e-43d5-bde8-987ad0950a8b"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -798,7 +784,6 @@
         "\n",
         "Explanation of the parameters from the `generation_config`:\n",
         "* `max_new_tokens`: the maximum number of tokens that can be generated in the output.\n",
-        "* `do_sample`. When set to True, this parameter enables probabilistic sampling from the distribution of possible next tokens generated by the model. This introduces randomness and variety in the generated text. If set to False, the model would always pick the most likely next token, leading to deterministic and less varied outputs.\n",
         "* `temperature`: controls how much randomness is introduced into the sampling process. A lower temperature value (closer to 0) makes the model more confident in its choices, resulting in less random outputs, while a higher temperature value (closer to 1) encourages more randomness and diversity.\n",
         "* `top_p` controls nucleus sampling, a technique that considers only the most probable tokens with a cumulative probability above the threshold top_p. It helps in generating text that is both diverse and coherent, avoiding the inclusion of very low-probability tokens that could make the text nonsensical.\n",
         "* `top_k` sampling limits the sampling pool to the k most likely next tokens. This further refines the set of tokens that the model will consider for generating the next piece of text, ensuring that the outputs remain relevant and coherent.\n",
@@ -807,7 +792,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "n9rImQx2fXPh",
         "colab": {
@@ -1035,7 +1020,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": null,
       "metadata": {
         "id": "65DPOWFAfZ5s"
       },
@@ -1058,25 +1043,12 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "SJPV4GIexAdL"
-      },
-      "source": [
-        "### Chain Construction:\n",
-        "* A `big_chunks_retriever` is used to fetch relevant information based on the query.\n",
-        "* `RunnablePassthrough()` is a component that simply passes along the question without any modification.\n",
-        "* The `llm` variable represents the Hugging Face pipeline, this pipeline will take the formatted input from the previous step and will produce an answer.\n",
-        "* The `StrOutputParser()` is an output parser, it takes the raw output from the Hugging Face pipeline and parse it into a string."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "BClU9XIXDinO"
       },
       "source": [
         "The following code defines a pipeline for a question-answering system with retrieval augmentation.\n",
         "\n",
-        "It starts by taking a question and uses it both directly as the question and as input to a base retrieval system (`big_chunks_retriever`) to fetch relevant context.\n",
+        "It starts by taking a question and uses it both directly as the question and as input to a base retrieval system to fetch relevant context.\n",
         "\n",
         "The retrieved context and the original question are then passed through a `RunnablePassthrough` for subsequent use, maintaining the context intact for reference.\n",
         "\n",
@@ -1085,7 +1057,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": null,
       "metadata": {
         "id": "yPN9c_vpw5Qk",
         "colab": {
@@ -1150,7 +1122,7 @@
         },
         "outputId": "8dbebe0d-c20f-4e04-c147-56c97b80e7dd"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1244,7 +1216,7 @@
         },
         "outputId": "99f22017-59b0-4652-cd35-f038471a63cb"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1829,7 +1801,7 @@
       "metadata": {
         "id": "nVyDSocS10Ib"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     }
   ],
@@ -1837,7 +1809,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPGaT6MDOrOTVuDJUVkJURo",
+      "authorship_tag": "ABX9TyODEj+SkUhHkPDYhIKDiTd9",
       "include_colab_link": true
     },
     "kernelspec": {
